--- a/style.css
+++ b/style.css
@@ -844,3 +844,26 @@ background-color:  #2d2daf;
   width: 100%;
   height: 30px;
 }
+#get-a-quote-container{
+  margin-top: 50px;
+  padding-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+}
+
+#get-a-quote-container h1{
+  color: #242656;
+  font-size: clamp(2.5rem, 2.11rem, 2.15rem);
+    text-transform: capitalize;
+}
+
+#get-a-quote-container p{
+  color: #242656;
+  font-size: clamp(1rem, 1.10rem, 1.15rem);
+  font-weight: 600;
+    text-transform: capitalize;
+}
